--- a/posts/templates/posts/mainpage.html
+++ b/posts/templates/posts/mainpage.html
@@ -16,7 +16,7 @@
         <div class="container-fluid d-flex align-items-center">
                 <!-- logo  -->
             <div class="logo d-flex">
-                <a class="navbar-brand" href="#">OpenUp</a>
+                <a class="navbar-brand" href="./mainpage.html"><img class="logo-img" src="../../static/img/logo2.png" alt="Openup"></a>
             </div>
                 <!-- end of logo -->
             <div class="links">
