--- a/posts/templates/posts/mainpage.html
+++ b/posts/templates/posts/mainpage.html
@@ -33,10 +33,10 @@
                         <a class="nav-link active" aria-current="page" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active premium" aria-current="page" href="{% url 'base' %}">Support Team </a>
+                        <a class="nav-link active premium" aria-current="page" href="{% url 'room' 'asdfg' %}">Support Team </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active premium" aria-current="page" href="#">Counsellor </a>
+                        <a class="nav-link active premium" aria-current="page" href="{% url 'base' %}">Counsellor </a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">
